@@ -27,6 +27,9 @@ Allgemein
 - Erweiterte Berechtigungen beim News Manager und den Modulen Kalender,
   Inserate Mark und Verzeichnis.
 
+Block System
+- Das Interface zur Auswahl der Frontend Seiten funktioniert korrekt.
+
 Benutzerverwaltung
 - Geburtstage zwischen dem 10. Februar 1653 und dem 16. November 5138 können
   erfasst werden.
